--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,12 @@
       }
     </style>
   </head>
-
-  <body
-    hx-get="/cv"
-    hx-trigger="load"
-    hx-target="this"
-    hx-swap="outerHTML"
-  ></body>
+  <div class="flex flex-row">
+    <div
+      hx-get="/cv"
+      hx-trigger="load"
+      hx-target="this"
+      hx-swap="outerHTML"
+    ></div>
+  </div>
 </html>
