refacto: backend architecture

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       }
     </style>
   </head>
-  <div class="flex flex-row">
+  <div class="flex flex-row gap-2 m-2">
     <div
       hx-get="/cv"
       hx-trigger="load"
