--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       }
     </style>
   </head>
-  <div class="flex justify-center">
+  <div class="flex justify-center bg-black">
     <div
       hx-get="/cv"
       hx-trigger="load"
